--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,22 @@
 {
   "hosting": {
-    "public": "y",
+    "public": "build",
     "ignore": [
       "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+      "*/.",
+      "*/node_modules/*"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "rewrites": [{
+      "source": "/public/**",
+      "destination": "/public.html"
+    },
+    {
+      "source": "**",
+      "destination": "/index.html"
+    }
+    ],
+      "storage": {
+      "rules": "storage.rules"
+    }
   }
-}
+ }
