--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-fetch": "0.0.9",
+    "react-google-login": "^5.1.2",
     "react-image": "^2.2.2",
     "react-image-lightbox": "^5.1.1",
     "react-linkify": "^0.2.2",
