--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "default": "chatbotmali",
-    "eiei": "chatbot-d3122"
+    "eiei": "chatbot-d3122",
+    "y": "chatbot-d3122"
   }
 }
